[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Command-line tool to fetch PubMed papers with non-academic authors."
authors = ["Neha Sontakke <nehasontakke1880@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pubmed_fetcher" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.4"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
